Fix settings drawer on mobile

--- a/src/assets/sass/partials/_video-player.scss
+++ b/src/assets/sass/partials/_video-player.scss
@@ -267,7 +267,7 @@
   right:0;
   border-radius:0;
 
-  @include medium {
+  @include small {
     width:240px;
     bottom:70px;
     right:50px;
